--- a/readme
+++ b/readme
@@ -3,7 +3,6 @@
 This program implements a hash table which uses a hashing function of my design
 and quadratic probing to store date-name pairs. The main function then asks for
 a date, and proceeds to find it in the array in low-complexity time. The data is
-also always held in an array of prime size and is its size is prime as to reduce
-hashing collisions.
+also always held in an array of prime size as to reduce hashing collisions.
 
 -Jared Engler
